plugins {
    id 'java'
    id 'org.springframework.boot' version '4.1.1'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.gradle.test-retry' version '1.6.4'
}

group = 'com.bjarne'
version = '0.0.1-SNAPSHOT'
description = 'video-service'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-security-oauth2-resource-server'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.85.2'
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'software.amazon.awssdk:s3:2.54.2'
    implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
    implementation 'com.bucket4j:bucket4j-core:8.10.1'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.0'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
    runtimeOnly 'org.postgresql:postgresql'
    testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
    testImplementation 'org.testcontainers:testcontainers-postgresql'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
    // No org.testcontainers:testcontainers-minio - Garage has no dedicated Testcontainers
    // module, so AbstractS3IntegrationTest wires it up as a plain GenericContainer instead.
    testImplementation 'org.testcontainers:testcontainers'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Without these overrides, a stuck HikariCP waits out the full default timeout (30s) again on
// every single test before treating the connection as dead - with 9-10 tests per class, that
// turns a single Testcontainers hiccup into a 5-minute hang. A short-ish timeout is plenty for
// tests; a real hiccup should then make the class fail in seconds instead of minutes. Doesn't
// apply to production (the Spring default from application.properties stays unchanged there).
//
// Root cause, found 2026-08-28 (see AbstractPostgresIntegrationTest/AbstractS3IntegrationTest for
// the actual fix): the "Connection refused" failures were never about Docker Desktop/WSL2
// networking, OOM, or Ryuk - `--info` logging of a full suite run showed a FRESH Postgres/MinIO
// container being created and started before almost every single test class. The container field
// is `static` on the abstract base specifically to be a JVM-wide singleton shared by every
// subclass, but it was previously annotated `@Container` under `@Testcontainers` - and that
// extension manages lifecycle PER TEST CLASS: each subclass's own beforeAll/afterAll called
// start()/stop() on the SAME shared field, so class A finishing its tests would stop the
// container out from under whichever class ran next, which then started its own replacement, and
// so on - dozens of containers churning through one suite run instead of a single shared
// instance, until Docker or the JVM ran out of room (which is what actually produced the
// SIGKILLs and "Connection refused" errors observed along the way). Fixed by switching both
// containers to a plain `static { ... .start(); }` initializer instead of `@Container` - a
// documented Testcontainers pattern for exactly this "shared across sibling subclasses via an
// abstract base" case. maxParallelForks and the Hikari timeout below are unrelated, orthogonal
// hardening kept from that investigation, not fixes for this bug:
// maxParallelForks=1 avoids two forks each running their own full container set at once on a
// resource-constrained CI runner; the 10000ms Hikari timeout (raised from 3000ms) is general
// tolerance for scheduling jitter on the database connection itself.
// A test that fails once because of a genuine remaining hiccup and then passes cleanly on retry
// isn't a real bug - maxFailures caps that to a single outlier batch, so a test that's actually
// broken (and fails on every retry too) still reliably turns the build red. 40 was enough for the
// suite up to AP6 (~72 tests) (already saw 20 failures in a single run); since AP7 (85 tests,
// several additional Testcontainers-heavy classes) the cap wasn't enough anymore on a bad batch -
// a full run summed across all retries was observed hitting up to ~55 failures before the plugin
// disables retry for the whole round (exactly when it's needed most). 100 instead of 40, with
// headroom.
tasks.withType(Test).configureEach {
    systemProperty 'spring.datasource.hikari.connection-timeout', '10000'
    systemProperty 'spring.datasource.hikari.validation-timeout', '10000'
    maxParallelForks = 1
    retry {
        maxRetries = 2
        maxFailures = 100
        failOnPassedAfterRetry = false
    }
}

tasks.named('test') {
    useJUnitPlatform()
}

// Faster CI gate task without the three FFmpeg-heavy classes (@Tag("ffmpeg")):
// FfmpegRunnerTest, MediaProbeTest, TranscodeServiceIntegrationTest. For the full run
// including the FFmpeg tests, keep using `test`.
tasks.register('fastTest', Test) {
    group = 'verification'
    description = 'Runs the test suite excluding @Tag("ffmpeg") tests (fast CI gate).'
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        excludeTags 'ffmpeg'
    }
}
